--- a/templates/task/form.html.twig
+++ b/templates/task/form.html.twig
@@ -1,4 +1,5 @@
-{# templates/task/new.html.twig #}
+{# templates/task/form.html.twig #}
+{# Cette page permet de gérer l'ajout, la modification et la continuation d'un objectif.#}
 {% block stylesheets %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ asset('style/task_new.css') }}">
@@ -26,33 +27,57 @@
             <i class="fa-solid fa-xmark"></i>
         </a>
     </span>
-    <h1>Création de votre objectif</h1>
-    <p>Créez votre objectif dès maintenant !</p>
-    <form action="{{ path('task_perso') }}" method="post">
+    <h1>{{nom}}</h1>
+    <form method="post">
     <div class="task">
+    {% if statut == "Créer" %}
         {{ form_row(task_perso.Task.Titre,{
             "required": true,
         }
         ) }}
+    {% elseif statut == "Modifier" %}
+        {{ form_row(task_perso.Task.Titre,{
+            "required": false,
+        }
+        ) }}
+    {% endif %}
+    {% if statut != "Continuer" %}
         {{ form_row(task_perso.Task.Description) }}
+    {% endif %}
+    {% if statut != "Continuer" %}
         <div class="category">
             {{ form_row(task_perso.Task.category, { 'attr': {'class': 'form-control'} }) }}
         </div>
+    {% endif %}
+    {% if statut == "Créer" %}
         <p>Désirez-vous ajouter une fréquence à votre objectif ?</p>
-        <button type="button" onclick="showFrequence()">Oui</button>
+    {% else %}
+        <p>Désirez-vous modifier la fréquence de votre objectif ?</p>
+    {% endif %}
+        <span class="showFrequence">
+            <button type="button" id="btnFrequence" onclick="showFrequence()">Oui</button>
+        </span>
+
         <div class="ChoixFrequence" style="display:none;">
         <p>Choisissez la fréquence de votre objectif :</p>
-        {{ form_label(task_perso.Task.NombreFois, 'Nombre de fois (laissez tel quel si vous ne voulez pas lui ajouter de fréquence):', {'label_attr': {'class': 'foo'}}) }}
+        {{ form_label(task_perso.Task.NombreFois, 'Nombre de fois :', {'label_attr': {'class': 'foo'}}) }}
         {{ form_widget(task_perso.Task.NombreFois) }}
         {{ form_label(task_perso.Task.ChoixTemps, 'Par : ', {'label_attr': {'class': 'foo'}}) }}
         {{ form_widget(task_perso.Task.ChoixTemps) }}
         </div>
     </div>
 
+
     <div class ="taskPerso">
-    {{ form_label(task_perso.dateDebut, 'Choisissez la date à laquelle vous souhaitez démarrer :', {'label_attr': {'class': 'foo'}}) }}
-    {{ form_widget(task_perso.dateDebut, { 'attr': {'class': 'form-control'} }) }}
-    {{ form_label(task_perso.dateDebut, 'Choisissez la date à laquelle vous souhaitez finir :', {'label_attr': {'class': 'foo'}}) }}
+    {% if statut == "Créer" %}
+        {{ form_label(task_perso.dateDebut, 'Choisissez la date à laquelle vous souhaitez démarrer :', {'label_attr': {'class': 'foo'}}) }}
+        {{ form_widget(task_perso.dateDebut, { 'attr': {'class': 'form-control'} }) }}
+    {% endif %}
+    {% if statut != "Créer" %}
+    {{ form_label(task_perso.dueDate, 'Choisissez votre nouvelle date de fin :', {'label_attr': {'class': 'foo'}}) }}
+    {% else %}
+    {{ form_label(task_perso.dueDate, 'Choisissez votre date de fin :', {'label_attr': {'class': 'foo'}}) }}
+    {% endif %}
     {{ form_widget(task_perso.dueDate, { 'attr': {'class': 'form-control'} }) }}
     
         <div class ="btn">
@@ -60,7 +85,9 @@
         </div>
     </div>
 
-    {{ form_rest(task_perso) }}
+    <div class="hidden" style="display:none;">
+        {{ form_rest(task_perso) }}
+    </div>
     </form>
     
 {% endblock %}
