Partie Amie terminé

--- a/templates/Amis/Addfriends.html.twig
+++ b/templates/Amis/Addfriends.html.twig
@@ -28,6 +28,6 @@
 {% endif %}
 {% if 'form=ok' in url %}
     <div class="alert alert-success" role="alert">
-        Ami ajouté
+        Demande d'ami envoyée 
     </div>
 {% endif %}
