--- a/public/style/Admin/Task/index.css
+++ b/public/style/Admin/Task/index.css
@@ -6,20 +6,21 @@ h1 {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 500;
-    font-size: 6.7vw;
+    font-size: 5vw;
     text-align: center;
     margin-top: 1vh;
     color: #DADEE3;
 }
 
 th,td{
-    font-family: 'Source Sans Pro';
+    font-family: 'poppins';
     color: #DADEE3;
 }
 
 #new-task{
     display: flex;
     justify-content: flex-end;
+    margin-top: 2vh;
 }
 
 .btn-new-task{
@@ -28,7 +29,40 @@ th,td{
 
 .table{
     width: 70vw;
-    margin-left: 15vw;
 }
 
+#divTable{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: scroll;
+    height: 50vh;
+    width: 100vw;
+}
+
+#buttons{
+    margin-left: 35vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.btn-primary{
+    font-family : "poppins";
+    background-color: #E86C00;
+    border: none;
+    border-radius: 1vh;
+    
+}
+
+.btn-primary:hover{
+    background-color : #b96a35;
+}
+
+.btn{
+    width: max-content;
+    margin-bottom: 1vh;
+    border-radius: 1vh;
+    font-family: "poppins";
+}
 
