--- a/public/style/Admin/TaskPerso/show.css
+++ b/public/style/Admin/TaskPerso/show.css
@@ -6,14 +6,14 @@ h1 {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 500;
-    font-size: 6.7vw;
+    font-size: 5vw;
     text-align: center;
     margin-top: 1vh;
     color: #DADEE3;
 }
 
 th,td{
-    font-family: 'Source Sans Pro';
+    font-family: 'poppins';
     color: #DADEE3;
 }
 
@@ -23,9 +23,29 @@ img{
 }
 
 #buttons{
+    margin-left: 35vw;
     display: flex;
-    justify-content: flex-end;
-    margin-right: 15vw;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.btn-primary{
+    font-family : "poppins";
+    background-color: #E86C00;
+    border: none;
+    border-radius: 1vh;
+    
+}
+
+.btn-primary:hover{
+    background-color : #b96a35;
+}
+
+.btn{
+    width: max-content;
+    margin-bottom: 1vh;
+    border-radius: 1vh;
+    font-family: "poppins";
 }
 
 #buttons a{
@@ -34,4 +54,5 @@ img{
 .table{
     width : 70vw;
     margin-left: 15vw;
+    margin-top: 10vh;
 }
