--- a/public/style/Admin/User/edit.css
+++ b/public/style/Admin/User/edit.css
@@ -6,20 +6,21 @@ h1 {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 500;
-    font-size: 6.7vw;
+    font-size: 5vw;
     text-align: center;
     margin-top: 1vh;
     color: #DADEE3;
 }
 
 label,legend{
-    font-family: 'Source Sans Pro';
+    font-family: 'popins';
     color: #DADEE3;
 }
 
 form[name = "user"]{
     width : 70vw;
     margin-left : 15vw;
+    margin-top: 10vh;
 }
 
 #user_pp{
@@ -34,13 +35,27 @@ img{
 }
 
 #buttons{
-    margin-left: 15vw;
+    margin-left: 35vw;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
 
+.btn-primary{
+    font-family : "poppins";
+    background-color: #E86C00;
+    border: none;
+    border-radius: 1vh;
+    
+}
+
+.btn-primary:hover{
+    background-color : #b96a35;
+}
+
 .btn{
     width: max-content;
     margin-bottom: 1vh;
+    border-radius: 1vh;
+    font-family: "poppins";
 }
