--- a/templates/task/form.html.twig
+++ b/templates/task/form.html.twig
@@ -2,7 +2,7 @@
 {# Cette page permet de gérer l'ajout, la modification et la continuation d'un objectif.#}
 {% block stylesheets %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ asset('style/task_new.css') }}">
+    <link rel="stylesheet" href="{{ asset('style/task/form.css') }}">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 {% endblock %}
